--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-hikvision-cam-webhook",
-  "version": "0.9.9",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "engines": {
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/vova0255/Homebridge-Hikvision-Webhook.git"
+    "url": "https://github.com/vova0255/Homebridge-Hikvision-Cam-Webhook"
   }, 
   "author": "JM1k1",
   "license": "ISC",
